add unittest , target as aws service now

--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,10 +11,15 @@
     "node-fetch": "^2.6.1",
     "sequelize": "^6.3.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.2.0",
+    "supertest": "^6.0.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "mocha test/restapitest.js",
+    "start": "node app.js",
+    "dev": "set GOOGLEMAPAPIKEY=AIzaSyClfFPTSCVamqtUP4Lj4RQ93RtcIbVWNwk && node app.js"
   },
   "author": "",
   "license": "ISC"
