--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -14,11 +14,10 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
-    "nyc": "^15.1.0",
     "supertest": "^6.0.0"
   },
   "scripts": {
-    "test": "env GOOGLEMAPAPIKEY=AIzaSyClfFPTSCVamqtUP4Lj4RQ93RtcIbVWNwk DBHOST=mydbinstance.cyrmt910qp5q.ap-northeast-1.rds.amazonaws.com DBNAME=LALAMOVE DBPASSWORD=dbpassword DBUSER=root mocha test/restapitest.js",
+    "test": "env GOOGLEMAPAPIKEY=AIzaSyClfFPTSCVamqtUP4Lj4RQ93RtcIbVWNwk DBHOST=mydbinstance.cyrmt910qp5q.ap-northeast-1.rds.amazonaws.com DBNAME=LALAMOVE DBPASSWORD=dbpassword DBUSER=root mocha test/restapitest.js --exit",
     "start": "node app.js",
     "dev": "set GOOGLEMAPAPIKEY=AIzaSyClfFPTSCVamqtUP4Lj4RQ93RtcIbVWNwk && node app.js"
   },
