--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
     - npm install
 after_success:
 - echo "$DOCKERPASSWORD" | docker login --username="$DOCKERUSER" --password-stdin
-- docker build -t "$DEPLOYIMAGE"
-- docker push "$DOCKERUSER/$DEPLOYIMAGE:latest"
+- docker build -t $DEPLOYIMAGE
+- docker push $DOCKERUSER/$DEPLOYIMAGE:latest
