update docker file relative path

--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -4,12 +4,12 @@ FROM node:latest
 WORKDIR /usr/src/app
 
 # Install app dependencies
-COPY /nodejs/package.json /usr/src/app/
+COPY package.json /usr/src/app/
 RUN npm install
 RUN yarn install && yarn cache clean
 
 # Bundle app source
-COPY /nodejs /usr/src/app
+COPY ./ /usr/src/app
 
 # Declaring PROT in containers
 EXPOSE 8080
